# xopr

./: .gitignore  .sops.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.json  demo-notebook.json  environment.yaml  environment.yml  index.html  index.json  myst.search.json  objects.inv  pyproject.toml  reading-params.json  reorganize_hive_structure.py  requirements.txt  search-and-scaling.json  test-polar-map-working.json  test-polar-map.json  upload_stac_catalogs.py
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  config.yml
.github/encrypted/: .gitkeep  gcs-credentials.enc.json
.github/scripts/: generate_report.py  generate_slack_report.py  process_traffic.py  visualize_traffic.py
.github/workflows/: changelog.yml  docs-preview-comment.yml  docs.yml  publish.yml  test.yml  traffic-analytics.yml  update-km-badge.yml
_static/maps/: polar.html
config/: awi_config.yaml  catalog.yaml  catalog_config_schema.py  catalog_examples.yaml  catalog_simple.yaml  cresis_config.yaml  dtu_config.yaml  utig_config.yaml
coverage/: class_index.html  function_index.html  index.html  status.json  z_0e4099a1ae53c452___init___py.html  z_0e4099a1ae53c452__version_py.html  z_0e4099a1ae53c452_cf_units_py.html  z_0e4099a1ae53c452_geometry_py.html  z_0e4099a1ae53c452_matlab_attribute_utils_py.html  z_0e4099a1ae53c452_opr_access_py.html  z_0e4099a1ae53c452_ops_api_py.html  z_0e4099a1ae53c452_util_py.html  z_26a5418b0e3facca___init___py.html  z_26a5418b0e3facca_formatting_html_py.html  z_26a5418b0e3facca_xopr_accessor_py.html  z_b4e434164fe11403___init___py.html  z_b4e434164fe11403_build_py.html  z_b4e434164fe11403_catalog_py.html  z_b4e434164fe11403_config_py.html  z_b4e434164fe11403_geometry_py.html  z_b4e434164fe11403_metadata_py.html  z_eca9826564b7d294___init___py.html  z_eca9826564b7d294_common_py.html  z_eca9826564b7d294_conftest_py.html  z_eca9826564b7d294_test_catalog_py.html  z_eca9826564b7d294_test_geometry_merge_py.html  z_eca9826564b7d294_test_integration_py.html  z_eca9826564b7d294_test_metadata_py.html  z_eca9826564b7d294_test_stac_validation_py.html
demo-notebook/: index.html
docs/: _config.yml  _toc.yml  conf.py  design.md  iframe-map.mjs  index.md  map.md  myst.yml  test_template.md
docs-preview/: index.html  index.json  myst.xref.json  reading-params.json  test-polar-map-working.json  test-polar-map.json
docs-preview/coverage/: function_index.html  z_0e4099a1ae53c452__version_py.html  z_0e4099a1ae53c452_geometry_py.html  z_0e4099a1ae53c452_opr_access_py.html  z_0e4099a1ae53c452_ops_api_py.html  z_0e4099a1ae53c452_util_py.html  z_26a5418b0e3facca___init___py.html  z_26a5418b0e3facca_formatting_html_py.html  (+7 more)
notebooks/: .gitignore  demo_notebook.ipynb
radar_cache/: cache
reading-params/: index.html
scripts/: README.md  aggregate_parquet_catalog.py  build_catalog.py  build_catalog_parallel.py  build_catalog_sequential.py  build_single_campaign_parquet.py  build_stac_catalog.py  build_stac_catalog_refactored.py  calc_lines.py  upload_stac_catalogs.py  upload_to_gcloud.sh
search-and-scaling/: index.html
test-polar-map/: index.html
test-polar-map-working/: index.html
(+58 files in other folders)
