[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "xopr"
dynamic = ["version"]
description = "Access Open Polar Radar data in the Python data ecosystem"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "xarray",
    "h5netcdf",
    "requests",
    "matplotlib",
    "aiohttp",
    "geoviews",
    "pystac",
    "shapely",
    "geopandas",
    "h5py",
    "pystac_client",
    "stac_asset",
    "fsspec",
    "dask[distributed]"
]

[project.optional-dependencies]
stac = [
    "stac-fastapi-geoparquet[serve]",
    "stac-geoparquet",
]
docs = [
    "jupyter-book>=2.0.0a0",
    "dask[distributed]",
    "coiled>=1.117.0",
    "ipykernel",
    "hvplot",
    "jupyter_bokeh",
]
test = [
    "pytest"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/xopr/_version.py"

