[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "xopr"
dynamic = ["version"]
description = "Access Open Polar Radar data in the Python data ecosystem"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "xarray",
    "h5netcdf",
    "requests",
    "matplotlib",
    "aiohttp",
    "geoviews",
    "shapely",
    "geopandas",
    "h5py",
    "fsspec",
    "dask[distributed]",
    "rustac>=0.8.1",
    "antimeridian>=0.4.3",
]

[project.optional-dependencies]
stac = [
    "pystac",
    "stac_asset",
    "stac-geoparquet",
    "stac-fastapi-geoparquet[serve]",
    "omegaconf",
    "pyarrow",
]
docs = [
    "jupyter-book>=2.0.0a0",
    "dask[distributed]",
    "coiled>=1.117.0",
    "ipykernel",
    "hvplot",
    "jupyter_bokeh",
]
test = [
    "pytest",
    "pytest-cov",
    "flake8",
    "stac-validator",
    "xopr[stac]"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/xopr/_version.py"

