[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "xopr"
dynamic = ["version"]
description = "Access Open Polar Radar data in the Python data ecosystem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "xarray",
    "h5netcdf",
    "requests",
    "matplotlib",
    "aiohttp",
    "geoviews",
    "shapely",
    "geopandas",
    "h5py",
    "fsspec",
    "dask[distributed]",
    "rustac>=0.6.0",
    "antimeridian>=0.4.3",
]

[project.optional-dependencies]
stac = [
    "pystac",
    "stac_asset",
    "stac-geoparquet",
    "stac-fastapi-geoparquet[serve]",
    "omegaconf",
    "pyarrow",
]
docs = [
    "mystmd",
    "dask[distributed]",
    "coiled>=1.117.0",
    "ipykernel",
    "jupyter",
    "jupyterlab",
    "hvplot",
    "jupyter_bokeh",
]
test = [
    "pytest",
    "pytest-cov",
    "flake8",
    "stac-validator",
    "xopr[stac]"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/xopr/_version.py"

